# jil_ticketing

./: .gitignore  Procfile  README.md  pyproject.toml
accounts/: admin.py
accounts/migrations/: 0001_initial.py  0002_alter_user_date_of_birth.py  0004_alter_ticket_id_alter_user_id.py  0005_alter_booking_id_alter_departure_id_and_more.py  0008_alter_tickettype_id.py  0010_alter_ticket_expires_at.py  0016_remove_user_date_of_birth.py
jilticketing/: Procfile  build.sh  db.sqlite3  manage.py  nohup.out  requirements.txt  urls.py
jilticketing/accounts/: admin.py  apps.py  backends.py  forms.py  models.py  urls.py  views.py
jilticketing/accounts/migrations/: 0001_initial.py  0003_departure_destination_trip_tickettype_ticket_booking.py  0006_alter_ticket_ticket_type_id.py  0007_alter_ticket_ticket_type_id.py  0009_rename_ticket_id_booking_ticket_and_more.py  0011_remove_tickettype_seat_ticket_seat.py  0013_tickettype_seats.py  (+3 more)
jilticketing/jilticketing/: asgi.py  settings.py  urls.py  wsgi.py
jilticketing/static/: index.css
jilticketing/staticfiles/: staticfiles.json
jilticketing/templates/: confirm.html  login.html  main.html  profile.html  register.html  trips.html
miyyah/: destination.html  gateway.html  home-registered.html  index.html  login.html  profile.html  reg.html  ticket.html  trips.html
miyyah/css/: destination.css  gateway.css  profile.css  reg.css  signup.css  style.css
miyyah/js/: app.js
static/styles/: confir.css
staticfiles/styles/: pay.css
templates/accounts/: book.html  confirm.html  pay.html  reghome.html  register.html
(+22 files in other folders)
