[tool.poetry]
name = "jil-ticketing"
version = "0.1.0"
description = "Ticketing App"
authors = ["Captjay and Miyyah"]
readme = "README.md"
packages = [{include = "jil_ticketing"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.7"
mysqlclient = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
